# bag-of-tricks

./: .gitignore
hello-world-zig/: .gitignore  build.zig  build.zig.zon
hello-world-zig/src/: main.zig
release-note/: .gitignore  PLAN.md  README.md  go.mod  prompt.json
release-note/internal/app/: filter_test.go  options.go  options_test.go  run.go  sanitize_test.go
release-note/internal/config/: config.go  config_test.go
release-note/internal/gitlog/: gitlog.go
release-note/internal/model/: model.go
release-note/internal/openai/: client.go
release-note/internal/prlookup/: prlookup.go  prlookup_test.go
release-note/internal/prompt/: prompt.go  prompt_test.go
video-player/: Makefile  README.md  go.mod  pp.py
video-player/cmd/pp/: main.go
video-player/internal/mpv/: ipc.go  proc.go
video-player/internal/pp/: app.go  mpv_files.go  playlist.go  timestamps.go
video-player/internal/tty/: avail_darwin.go  avail_linux.go  avail_other_unix.go  avail_windows.go  keys.go
video-subtitle/: README.md  go.mod  pyproject.toml
video-subtitle/cmd/video-subtitle/: main.go
video-subtitle/src/video_subtitle/: __init__.py  cli.py
wget-url-list/: .gitignore  CMakeLists.txt  README.md  go.mod  main.cpp  main.go
