[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-subtitle"
version = "0.1.0"
description = "Generate SRT subtitles from audio/video with Whisper and translate them."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "openai>=1.30.0",
]

[project.scripts]
video-subtitle = "video_subtitle.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
